14 January 2009

* The alt-up and alt-down keys now resize a pane by five lines at a time.
* switch-pane is now select-pane and requires -p to select a pane. The
  "o" key binding is changed to down-pane.
* up-pane and down-pane commands, bound to arrow up and down by default.
* Multiple vertical window splitting. Minimum pane size is four lines, an
  (unhelpful) error will be shown if attempting to split a window with less
  that eight lines. If the window is resized, as many panes are shown as can
  fit without reducing them below four lines. There is (currently!) not a way
  to show a hidden a pane without making the window larger.

  Note the -p and -l options to split-window are now gone, these may reappear
  once I think them through again.
* Server locking on inactivity (lock-after-time) is now disabled by default.

13 January 2009

* kill-pane command.

12 January 2009

* command-prompt now accepts a single argument, a template string. Any
  occurrences of %% in this string are replaced by whatever is entered at the
  prompt and the result is executed as a command. This allows things like (now
  bound by default):

  	 bind , command-prompt "rename-window %%"

  Or my favourite:

         bind x command-prompt "split-window 'man %%'"

* Option to set prefix time, allowing multiple commands to be entered without
  pressing the prefix key again, so long as they each typed within this time of
  each other.
* Yet more hacks for key handling. Think it is just about working now.
* Two commands, resize-pane-up and resize-pane-down to resize a pane.
* Make the window pane code handle panes of different sizes, and add a -l
  and -p arguments to split-window to specify the new window size in lines
  or as a percentage.

11 January 2009

* GCC screws up copying (window-copy.c) so build with -O0 until I have time to
  find the problem or a better workaround.
* Vertical window splitting. Currently can only split a window into two panes.