@@ -1,4 +1,4 @@
-/* $Id: cmd-send-prefix.c,v 1.21 2009-01-13 00:48:50 nicm Exp $ */
+/* $Id: cmd-send-prefix.c,v 1.22 2009-01-14 22:13:30 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -52,12 +52,6 @@ cmd_send_prefix_exec(struct cmd *self, struct cmd_ctx *ctx)
 
 	key = options_get_number(&s->options, "prefix");
 	window_pane_key(wl->window->active, ctx->curclient, key);
-
-	/* Don't want this to be repeated so reset command timer. */
-	if (ctx->curclient != NULL) {
-		if (gettimeofday(&ctx->curclient->command_timer, NULL) != 0)
-			fatal("gettimeofday");
-	}
 
 	if (ctx->cmdclient != NULL)
 		server_write_client(ctx->cmdclient, MSG_EXIT, NULL, 0);
