@@ -1,4 +1,4 @@
-/* $Id: tmux.c,v 1.95 2009-01-14 18:41:55 nicm Exp $ */
+/* $Id: tmux.c,v 1.96 2009-01-14 22:13:30 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -234,7 +234,7 @@ main(int argc, char **argv)
 	options_set_number(&global_options, "message-bg", 3);
 	options_set_number(&global_options, "message-fg", 0);
 	options_set_number(&global_options, "prefix", META);
-	options_set_number(&global_options, "prefix-time", 0);
+	options_set_number(&global_options, "repeat-time", 500);
 	options_set_number(&global_options, "set-titles", 1);
 	options_set_number(&global_options, "lock-after-time", 0);
 	options_set_number(&global_options, "status", 1);
